--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
-<HTML>
-<HEAD>
-<TITLE>Hello World in HTML</TITLE>
-</HEAD>
-<BODY>
-<CENTER><H1>Hello World!</H1></CENTER>
-</BODY>
-</HTML>
+<head> <link href="indexcss.css" rel="stylesheet">
+  
+<meta charset="utf-8">
+<html>
+</head>
+<body>
+
+    <button id="btn-login" class="btn-login">Sign In</button>
+
+
+</body>
+</html>
+<script src="https://cdn.auth0.com/js/lock-8.1.min.js"></script>
+
+  <!-- Setting the right viewport -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<script src="app.js"></script>
