--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <head> <link href="indexcss.css" rel="stylesheet">
   
 <meta charset="utf-8">
@@ -10,7 +11,7 @@
 
 </body>
 </html>
-<script src="https://cdn.auth0.com/js/lock-8.1.min.js"></script>
+<script src="https://cdn.auth0.com/js/auth0/8.10.1/auth0.min.js"></script>
 
   <!-- Setting the right viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
