--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 </body>
 </html>
+<script src="js/login.js"></script>
 <script src="https://cdn.auth0.com/js/auth0/8.10.1/auth0.min.js"></script>
 
   <!-- Setting the right viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<script src="app.js"></script>
+<!-- <script src="app.js"></script> --> 
