--- a/index.html
+++ b/index.html
@@ -1,19 +1,54 @@
-
-<head> <link href="indexcss.css" rel="stylesheet">
-  
-<meta charset="utf-8">
+<!doctype html>
 <html>
+<head>
+  <meta charset="utf-8">
+  <title>Login</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <button id="btn-login" class="btn-login">Sign In</button>
+  <div id="loading">
+    <img src="assets/loading.svg" alt="Loading spinner">
+  </div>
 
+  <div class="content">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Auth0 - JavaScript</a>
 
+          <button id="btn-home-view" class="btn btn-primary btn-margin">
+              Home
+          </button>
+
+          <button id="btn-login" class="btn btn-primary btn-margin">
+              Log In
+          </button>
+
+          <button id="btn-logout" class="btn btn-primary btn-margin">
+              Log Out
+          </button>
+
+        </div>
+      </div>
+    </nav>
+
+    <main class="container">
+      <!-- home view -->
+      <div id="home-view">
+        <h4></h4>
+      </div>
+      
+    </main>
+
+  </div>
+
+  <script src="node_modules/auth0-js/build/auth0.js"></script>
+  <script src="auth0-variables.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
-<script src="js/login.js"></script>
-<script src="https://cdn.auth0.com/js/auth0/8.10.1/auth0.min.js"></script>
-
-  <!-- Setting the right viewport -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<!-- <script src="app.js"></script> --> 
