--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     </main>
 
   </div>
+<script src="https://cdn.auth0.com/js/auth0/8.10.1/auth0.min.js"></script>
+ 
 
-  <script src="node_modules/auth0-js/build/auth0.js"></script>
-  <script src="auth0-variables.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
