--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   </div>
 <script src="https://cdn.auth0.com/js/auth0/8.10.1/auth0.min.js"></script>
- 
+ <script src="auth0.js"></script>
 
   <script src="app.js"></script>
 </body>
