--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet" href="Users/Asus/Desktop/01-login/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <div id="loading">
-    <img src="Users/Asus/Desktop/01-login/assets/loading.svg" alt="Loading spinner">
+    <img src="assets/loading.svg" alt="Loading spinner">
   </div>
 
 
