--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
   <ul class="flex-container">
-    <li class="flex-item"><img class="imgClassLogo" src="https://firebasestorage.googleapis.com/v0/b/storied-groove-188117.appspot.com/o/322.png?alt=media&token=d212aea0-8f3a-463e-b5dd-b7e402f9f6f3" alt="Mountain View"></li>
+    <li class="flex-item"><img class="imgClassLogo" src="https://firebasestorage.googleapis.com/v0/b/storied-groove-188117.appspot.com/o/raincomp2.png?alt=media&token=edafd47e-c130-4a0c-958a-259be9587408" alt="Mountain View"></li>
     <li class="flex-item">  <div class="content">
     
         
@@ -52,7 +52,7 @@
       </main>
   
     </div></li>
-    <li id="123" class="flex-item"><img class="imgClassProduct" src="https://firebasestorage.googleapis.com/v0/b/storied-groove-188117.appspot.com/o/raincomp2.png?alt=media&token=edafd47e-c130-4a0c-958a-259be9587408" alt="Mountain View"></li>
+    <li id="123" class="flex-item"><img class="imgClassProduct" src="https://firebasestorage.googleapis.com/v0/b/storied-groove-188117.appspot.com/o/322.png?alt=media&token=d212aea0-8f3a-463e-b5dd-b7e402f9f6f3" alt="Mountain View"></li>
     <li  id="1234" class="flex-item">The Rain Company Hat</li>
     <li  id="1235" class="flex-item">$20.00</li>
     <li  id="1236" class="flex-item"><button id="btn-buy" class="btn btn-primary btn-margin">
