--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
   <script src="node_modules/auth0-js/build/auth0.js"></script>
-  <script src="Users/Asus/Desktop/01-login/auth0-variables.js"></script>
-  <script src="Users/Asus/Desktop/01-login/app.js"></script>
+  <script src="auth0-variables.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
