--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -64,7 +64,7 @@
 
 
 
-  <script src="node_modules/auth0-js/build/auth0.js"></script>
+  <script src="auth0.js"></script>
   <script src="auth0-variables.js"></script>
   <script src="app.js"></script>
 </body>
