--- a/index.html
+++ b/index.html
@@ -62,7 +62,19 @@
     <li  id="1238" class="flex-item">Shipping (RU) and tax included</li>
   </ul>
 
-
+<script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyAP8DEjHcevF8r3sQKrd-EWX8GGQ4bj8eA",
+    authDomain: "storied-groove-188117.firebaseapp.com",
+    databaseURL: "https://storied-groove-188117.firebaseio.com",
+    projectId: "storied-groove-188117",
+    storageBucket: "storied-groove-188117.appspot.com",
+    messagingSenderId: "825472691748"
+  };
+  firebase.initializeApp(config);
+</script>
 
   <script src="auth0.js"></script>
   <script src="auth0-variables.js"></script>
