--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
            
             <ul class="flex-container2">
                 <li class="flex-item">
-            <button id="btn-home-view" class="btn btn-primary btn-margin">
+            <button id="btn-home-view" class="btn btn-primary btn-margin" href="https://www.boringcompany.com/hat/">
                 Home
             </button>
   </li>
