--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
            
             <ul class="flex-container2">
                 <li class="flex-item">
-            <button id="btn-home-view" class="btn btn-primary btn-margin" href="https://www.boringcompany.com/hat/">
-                Home
-            </button>
+           <form action="https://www.boringcompany.com/hat/"> 
+<button id="btn-home-view" class="btn btn-primary btn-margin" onfocus="this.blur()"> Home </button> 
+</form>
   </li>
   <li class="flex-item">   <button id="btn-login" class="btn btn-primary btn-margin">
                 Log In
