--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
 <head>
+  
   <meta charset="utf-8">
-  <title>Login</title>
+  <title>Umbrella - The Rain Company</title>
+  <link rel = "shortcut icon" href = "https://firebasestorage.googleapis.com/v0/b/storied-groove-188117.appspot.com/o/2000px-U%2B2602.svg.png?alt=media&token=4573d51f-78d5-47d3-ab77-b5e96212b72b" type = "image/x-icon">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
