--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ jQuery(function($){
         
       </ul>
   
-      <main class="container">
+      <main>
         <!-- home view -->
         <div id="home-view">
           <h4></h4>
