--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@ jQuery(function($){
           url: 'sendmessage.php',
           data: $("#contact").serialize(),
           success: function(data) {
-            if(data == "true") {
+            if(data == "true") {*/
               $("#contact").fadeOut("fast", function(){
-                $(this).before("<p><strong>Успешно! Ваше сообщение отправлено  :)</strong></p>");*/
+                $(this).before("<p><strong>Успешно! Ваше сообщение отправлено  :)</strong></p>");
                 setTimeout("$.fancybox.close()", 1000);
               });
-            }
+            /*}*/
           }
         });
       }
