--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ jQuery(function($){
     <li  id="1236" class="flex-item"><button id="btn-buy" class="btn btn-primary btn-margin">
       ADD TO CART</button></li>
      <li  id="12367" class="flex-item">
-    <a <!--id ="123678" --> href="#inline" class="modalbox1" >Обратный звонок</a>
+    <a <!--id ="123678" --> href="#inline" class="modalbox" >Обратный звонок</a>
 
 <div id="inline">
   <h2>Онлайн заявка</h2>
