--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel = "shortcut icon" href = "https://firebasestorage.googleapis.com/v0/b/storied-groove-188117.appspot.com/o/2000px-U%2B2602.svg.png?alt=media&token=4573d51f-78d5-47d3-ab77-b5e96212b72b" type = "image/x-icon">
   <base href="/">
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="normalize.css">
+<link rel="stylesheet" href="normolize.css">
 <title>Форма обратной связи</title>
  <link rel="shortcut icon" href="favicon.png" type="image/png">
 
