--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ jQuery(function($){
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<script src="node_modules/telegram-api-js/dist/telegramApi.js"></script>
   <div id="loading">
     <img src="assets/loading.svg" alt="Loading spinner">
   </div>
