--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@ jQuery(function($){
     <li id="123" class="flex-item"><img class="imgClassProduct" src="https://firebasestorage.googleapis.com/v0/b/storied-groove-188117.appspot.com/o/322.png?alt=media&token=d212aea0-8f3a-463e-b5dd-b7e402f9f6f3" alt="Mountain View"></li>
     <li  id="1234" class="flex-item">The Rain Company Hat</li>
     <li  id="1235" class="flex-item">$20.00</li>
-    <li  id="1236" class="flex-item"><button id="btn-buy" class="btn btn-primary btn-margin">
-      ADD TO CART</button></li>
+  <!--  <li  id="1236" class="flex-item"><button id="btn-buy" class="btn btn-primary btn-margin">
+      ADD TO CART</button></li> -->
      <li  id="12367" class="flex-item">
-    <a id="5" href="#inline" class="modalbox" >Обратный звонок</a>
+    <a id="5" href="#inline" class="modalbox" >PLACE ORDER</a>
 
 <div id="inline">
   <h2>Онлайн заявка</h2>
