--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@ jQuery(function($){
 <button id="btn-home-view" class="btn btn-primary btn-margin" onfocus="this.blur()"> Home </button> 
 </form>
   </li>
-  <li class="flex-item">   <button id="btn-login" class="btn btn-primary btn-margin">
+  <li class="flex-item">   <button id="btn-login" class="btn  btn-margin">
                 Log In
             </button></li>
             <li class="flex-item">
-            <button id="btn-logout" class="btn btn-primary btn-margin">
+            <button id="btn-logout" class="btn  btn-margin">
                 Log Out
             </button></li>
   
